syntax = "proto3";

package booking;

option go_package = "./;proto";

import "user.proto";
import "dictionary_service.proto";
import "address.proto";
import "outmember.proto";
import "booking.proto";

message Room {
  string uuid = 1;
  User author = 2;
  string title = 3;// room name
  string description = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string targetAudience = 7; 
  AddressStatus status = 8;
  User assignee = 9; //Согласующий (employee)
  repeated Outmember outmembers = 10;
  repeated Link links = 11;
  repeated Attachment attachments = 12; //(files)
  uint64 number = 13;
  string creationDate = 14;
  User owner = 15;
  repeated Release releases = 16;
  repeated RoomSlot slots = 17;
  repeated RoomEquipment equipments = 18;
  repeated Booking bookings = 19;
  repeated RoomReport reports = 20;
  repeated Participant participants = 21;
  AddressState state = 22;
  string security_email = 23;
  int32 space = 24; 
  bool visible = 25;  
}

message Release {
  string uuid = 1;
  string title = 2;
  string description = 3;
  string date = 4;
  Notification factSlot = 5;
  string roomID = 6;
}

message RoomSlot {
  string uuid = 1;
  Timeline timeline = 2;
  Notification planSlot = 3;
  Notification factSlot = 4;
  string createdAt = 5;
}

message RoomEquipment {
  string uuid = 1;
  string title = 2;
  Timeline timeline = 3;
  string description = 4;
  float planValue = 5;
  float factValue = 6;
  string createdAt = 7;
}

message Slot {
  Timeline timeline = 1;
  Notification planSlot = 2;
  Notification factSlot = 3;
}

message Equipment {
  string title = 1;
  Timeline timeline = 2;
  string description = 3;
  float planValue = 4;
  float factValue = 5;
}

message RoomReport {
  Timeline timeline = 1;
  string comment = 2;
  string uuid = 3;
  repeated Release releases = 4;
  repeated Slot slots = 5;
  repeated Equipment equipments = 6;
}
